--- a/src/components/ui/burger-constructor/burger-constructor.module.css
+++ b/src/components/ui/burger-constructor/burger-constructor.module.css
@@ -8,7 +8,6 @@
 
 .elements {
   min-height: 100px;
-
   overflow-y: scroll;
   list-style-type: none;
   margin: 0;
@@ -61,6 +60,7 @@
 .element {
   display: flex;
   align-items: center;
+  margin-top: 0px;
   justify-content: flex-end;
 }
 
@@ -73,4 +73,8 @@
   flex-direction: column;
   width: 100%;
   max-width: 536px;
+}
+
+.element_ingredients {
+  margin-bottom: 16px;
 }
